<resources>
    <string name="app_name">Pervasif dan Sensor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="zaza">5113100178 Kinasih Nur Azizah</string>
    <string name="anip">5113100184 Hanif Sudira</string>
    <string name="sadam">5113100187 Muhammad Saddam</string>
    <string name="arvi">5113100189 Admiral Budi Arviansyah W</string>
    <string name="eko">5113100194 Eko Putro Fitrianto</string>
</resources>
