<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mobile.its.ac.id.sensor.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/kel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kelompok 10"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="28dp"/>
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kel"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zaza"
            android:fontFamily="sans-serif"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anip"
            android:fontFamily="sans-serif"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sadam"
            android:fontFamily="sans-serif"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arvi"
            android:fontFamily="sans-serif"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eko"
            android:fontFamily="sans-serif"
            android:textSize="18dp"/>
    </LinearLayout>

</RelativeLayout>
